--- a/src/css/app.scss
+++ b/src/css/app.scss
@@ -1,1 +1,34 @@
 // app global css in SCSS form
+@font-face {
+  font-family: Sarabun;
+  src: url("../../public/fonts/Sarabun-Regular.ttf");
+}
+
+.f12 {
+  font-size: 12px;
+}
+
+.f14 {
+  font-size: 14px;
+}
+
+.f16 {
+  font-size: 16px;
+}
+
+.brx {
+  border: 1px solid red;
+}
+
+body {
+  background-image: url("../../public/images/bgs.png");
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-attachment: fixed;
+  font-family: Sarabun;
+  height: 100vh;
+}
+
+.container-login {
+  width: 320px;
+}
