--- a/src/css/quasar.variables.scss
+++ b/src/css/quasar.variables.scss
@@ -13,12 +13,12 @@
 // Tip: Use the "Theme Builder" on Quasar's documentation website.
 
 $primary: #d89c7e;
+$positive: #388e3c;
 $dark: #512a08;
 // ----------
 $secondary: #26a69a;
 $accent: #9c27b0;
 
-$positive: #21ba45;
 $negative: #c10015;
 $info: #31ccec;
 $warning: #f2c037;
