--- a/src/css/app.scss
+++ b/src/css/app.scss
@@ -15,9 +15,12 @@
 .f16 {
   font-size: 16px;
 }
+.f18 {
+  font-size: 18px;
+}
 
-.f24 {
-  font-size: 16px;
+.f20 {
+  font-size: 20px;
 }
 
 .brx {
