--- a/src/css/quasar.variables.scss
+++ b/src/css/quasar.variables.scss
@@ -12,7 +12,7 @@
 // to match your app's branding.
 // Tip: Use the "Theme Builder" on Quasar's documentation website.
 
-$primary: #d89c7e;
+$primary: #388e3c;
 $positive: #388e3c;
 $dark: #512a08;
 // ----------
